--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "dependencies": {
     "anymatch": "^3.1.1",
     "clone-response": "^1.0.2",
@@ -20,13 +21,14 @@
     "pupa": "^2.0.1",
     "readdirp": "^3.4.0",
     "responselike": "^1.0.2",
-    "semver-diff": "^3.1.1"
+    "semver-diff": "^3.1.1",
+    "uuid": "^8.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
